--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	font-size: 24px;
 	color: #6C0000;
 }
+.style29 {color: #666666}
 -->
         </style><noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -54,7 +55,7 @@
 	                </div>
 	              <div class="features">
                     <article>
-                      <p>------------------------------------------------------</p>
+                      <p>--------------------------------</p>
                       <h3 class="style28">School Introduction</h3>
                       <p class="style6"><a href="http://wdja.es.jne.kr/" class="image"><img src="images/pic01.jpg" alt="" /></a>                      </p>
                       <div class="inner">
@@ -74,9 +75,9 @@
                           <p>완도수산고등학교 (2010. 3 ~ 2013. 2)</p>
                           <p><a href="http://www.mokpo.ac.kr/index.9is" class="image"><img src="images/pic04.jpg" alt="" /></a></p>
                           <div class="inner">
-                            <h4 class="style27">Mokpo National University</h4>
-                            <p>목포대학교 (2013.3 ~ing)</p>
-                            <p>------------------------------------------------------</p>
+                            <h4 class="style27">Mokpo National University <span class="style29">architecture</span></h4>
+                            <p>목포대학교 건축학과(2013.3 ~ing)</p>
+                            <p>--------------------------------</p>
                           </div>
                           <div class="container">
                             <h3 class="style28">Message contact</h3>
