--- a/index.html
+++ b/index.html
@@ -55,29 +55,35 @@
 	                </div>
 	              <div class="features">
                     <article>
-                      <p>--------------------------------</p>
-                      <h3 class="style28">School Introduction</h3>
+                      <p>〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓</p>
+                      <p><span class="style28">School Introduction</span></p>
                       <p class="style6"><a href="http://wdja.es.jne.kr/" class="image"><img src="images/pic01.jpg" alt="" /></a>                      </p>
                       <div class="inner">
                         <h4 class="style27">Wando Jungang Elementary School</h4>
                           <p>완도중앙초등학교 (2001. 3 ~ 2007. 2)</p>
+                          <p>―――――――――――――――――――</p>
                       </div>
                     </article>
-                    <article> <a href="http://wando.ms.jne.kr/" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                    <article> 
+                      <p><a href="http://wando.ms.jne.kr/" class="image"><img src="images/pic02.jpg" alt="" /></a></p>
                       <div class="inner">
                           <h4 class="style27">Wando <SPAN lang="en">Middle School</SPAN></h4>
                         <p>완도중학교 (2007. 3 ~ 2010. 2)</p>
-                        </div>
+                        <p>―――――――――――――――――――</p>
+                      </div>
                     </article>
-                    <article><a href="http://wandosugo.hs.jne.kr/" class="image"><img src="images/pic03.jpg" alt="" /></a>
-                        <div class="inner">
+                    <article>
+                      <p><a href="http://wandosugo.hs.jne.kr/" class="image"><img src="images/pic03.jpg" alt="" /></a></p>
+                      <div class="inner">
                           <h4 class="style27">Wando Fisheries High School</h4>
                           <p>완도수산고등학교 (2010. 3 ~ 2013. 2)</p>
+                          <p>―――――――――――――――――――</p>
                           <p><a href="http://www.mokpo.ac.kr/index.9is" class="image"><img src="images/pic04.jpg" alt="" /></a></p>
                           <div class="inner">
-                            <h4 class="style27">Mokpo National University <span class="style29">architecture</span></h4>
-                            <p>목포대학교 건축학과(2013.3 ~ing)</p>
-                            <p>--------------------------------</p>
+                            <h4 class="style27">Mokpo National University</h4>
+                            <h4 class="style27"><span class="style29">architecture</span></h4>
+                            <p>목포대학교 건축학과 (2013.3 ~ing)</p>
+                            <p>〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓〓</p>
                           </div>
                           <div class="container">
                             <h3 class="style28">Message contact</h3>
@@ -131,7 +137,7 @@
                       </div>
                     </article>
 	              </div>
-	              </footer>
+                </footer>
 			  </section>
 	  <footer id="footer">
 						<ul class="copyright">
